Added basic achievement support to companion
The companion now accepts an achievement id and queries Battle.net and displays the .toString() in a ListView.

--- a/algaloncompanion/src/main/res/values/strings.xml
+++ b/algaloncompanion/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Algalon Companion</string>
+    <string name="achievement_hint">2144</string>
 </resources>
